--- a/official/argo-cd/values-custom.yaml
+++ b/official/argo-cd/values-custom.yaml
@@ -435,7 +435,7 @@ configs:
     # -- Bcrypt hashed admin password
     ## Argo expects the password in the secret to be bcrypt hashed. You can create this hash with
     ## `htpasswd -nbBC 10 "" $ARGO_PWD | tr -d ':\n' | sed 's/$2y/$2a/'`
-    argocdServerAdminPassword: ""
+    argocdServerAdminPassword: "$2a$10$whg/iCxyCDgb1rzfL0ZKMuqrGSzakkvNU.BZnjV3ocSwduv6DPy"
     # -- Admin password modification time. Eg. `"2006-01-02T15:04:05Z"`
     # @default -- `""` (defaults to current time)
     argocdServerAdminPasswordMtime: ""
