--- a/official/argocd-image-updater/values-custom.yaml
+++ b/official/argocd-image-updater/values-custom.yaml
@@ -86,10 +86,10 @@ config:
   disableKubeEvents: false
 
   # -- Username to use for Git commits
-  gitCommitUser: "affranco"
+  gitCommitUser: "rockemsockem"
 
   # -- E-Mail address to use for Git commits
-  gitCommitMail: "andresfelipefranco@icloud.com"
+  gitCommitMail: "theautomationrules@gmail.com"
 
   # -- Changing the Git commit message
   gitCommitTemplate: "Commit from ArgoCD Imagen Updater"
